--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-.architect
-bootstrap.css
-bootstrap.js
-bootstrap.json
-bootstrap.jsonp
-build/
-classic.json
-classic.jsonp
-ext/
-modern.json
-modern.jsonp
-resources/sass/.sass-cache/
-resources/.arch-internal-preview.css
-.arch-internal-preview.css
+# Dependencies
+/node_modules/
+next/cache/
+
+# Build artifacts
+.out/
+.next/
+public/static/
+
+# Development files
+.next/cache/*.pack
+.next/cache/*.js
+.next/cache/*.css
+
+# IDE files
+*.suo
+*.user
+*.vscode/
+
+# Other
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
